--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.table {
+    margin-bottom: 0;
+}
+
+.checkbox {
+    margin-top: 0;
 }
